--- a/style.css
+++ b/style.css
@@ -17,3 +17,90 @@
     justify-content: center;
     align-items: center;
 }
+body {
+    height: 100dvh;
+    background-color: rgb(17, 19, 23);
+    font-family: Ubuntu, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    color: white;
+}
+#container {
+    width: 20rem;
+    height: 34rem;
+    border-radius: 2rem;
+    padding: 2rem;
+    justify-content: space-evenly;
+    background-color: rgb(22, 24, 29);
+    border: 1px solid rgb(27, 29, 35);
+    box-shadow: 0 0 25px #111;
+}
+#container p {
+    width: 100%;
+    text-align: right;
+    color: rgb(104, 111, 123);
+    font-weight: 600;
+}
+#container h1 {
+    width: 100%;
+    font-size: 3rem;
+    text-align: right;
+}
+#buttonHolder {
+    width: 100%;
+    height: 22rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 0.8fr);
+    gap: 0.6rem;
+}
+.wide {
+    grid-column: span 2;
+}
+button {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    border: none;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.25rem;
+    font-family: 'Jetbrains mono';
+    transition: scale 50ms ease-in-out, background-color 200ms ease-in-out;
+}
+button:active {
+    scale: 0.9;
+}
+.modifiers {
+    background-color: rgb(33, 36, 44);
+}
+.modifiers:hover {
+    background-color: rgb(60, 66, 80);
+}
+.operators {
+    background-color: rgb(54, 61, 73);
+}
+.operators:hover {
+    background-color: rgb(75, 84, 100);
+}
+.operands {
+    background-color: rgb(39, 44, 53);
+}
+.operands:hover {
+    background-color: rgb(64, 71, 84);
+}
+#calculate {
+    background-color: rgb(249, 116, 21);
+}
+#calculate:hover {
+    background-color: rgb(255, 133, 46);
+}
+#deleteInstruction {
+    font-size: 0.8rem;
+    font-weight: 400 !important;
+}
+#deleteInstruction svg {
+    height: 1em;
+    margin-right: 0.25em;
+}
