--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body {
 }
 #container p {
     width: 100%;
+    height: 1rem;
+    font-size: 1rem;
     text-align: right;
     color: rgb(104, 111, 123);
     font-weight: 600;
